Home page is complete

--- a/style.css
+++ b/style.css
@@ -198,3 +198,15 @@ body {
         opacity: 1;
     }
 }
+
+
+
+
+/* About Section */
+
+.about{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 1.5rem;
+}
